# apifuck

./: .gitignore  .impeccable.md  AGENTS.md  README.md  README_en.md  README_zh.md  eslint.config.mjs  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/release-tag-publish/: SKILL.md
.agents/skills/release-tag-publish/agents/: openai.yaml
.agents/skills/shadcn/: SKILL.md  customization.md
.agents/skills/shadcn/rules/: base-vs-radix.md  composition.md  forms.md  icons.md
.agents/skills/tauri-v2/references/: ipc-patterns.md
.agents/skills/vercel-react-best-practices/: AGENTS.md
.agents/skills/vercel-react-best-practices/rules/: advanced-init-once.md  advanced-use-latest.md  bundle-barrel-imports.md  bundle-preload.md  js-cache-storage.md  js-combine-iterations.md  js-min-max-loop.md  rendering-usetransition-loading.md  rerender-no-inline-components.md  rerender-simple-expression-in-memo.md  server-cache-lru.md  server-serialization.md
.claude/skills/frontend-skill/agents/: openai.yaml
.claude/skills/shadcn/agents/: openai.yml
.claude/skills/shadcn/rules/: styling.md
.claude/skills/tauri-v2/: README.md  SKILL.md
.github/workflows/: release.yml
docs/: auto-update.md  basic_ui.md  storage_system.md
docs/release/: 0.0.1.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md
scripts/release/: sync-version.mjs  update-readme-downloads.mjs
src/: app.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  error.rs  http.rs  lib.rs  main.rs  websocket.rs
src-tauri/src/storage/: mod.rs
src/components/: settings-dialog.tsx
src/components/monaco-editor/: index.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  button-group.tsx  button.tsx  card.tsx  checkbox.tsx  code-highlight.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  input-group.tsx  input.tsx  item.tsx  popover.tsx  progress.tsx  resizable.tsx  select.tsx  sonner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx
src/features/workbench/: curl-parser.ts  request-export.ts  types.ts  utils.ts
src/lib/: app-config.ts  appearance.ts  project.ts  script-runner.ts  shiki.ts  updater.ts  workspace.ts
(+24 files in other folders)
